<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_details"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"/>
    </com.google.android.material.appbar.MaterialToolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/enter_name"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_here" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:text="@string/enter_age"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_here" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:text="@string/enter_gender"/>

    <Spinner
        android:id="@+id/userGender"
        android:paddingLeft="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:text="@string/enter_height"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_here" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_gravity="center"
        android:text="@string/enter_weight"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/userWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_here" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        android:text="@string/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green" />




</androidx.appcompat.widget.LinearLayoutCompat>